testdata/baselines/reference/conformance/typedefModuleExportsIndirect2.errors.txt
use.js(1,22): error TS2307: Cannot find module './controlFlowJSClassProperty' or its corresponding type declarations.


==== typedefModuleExportsIndirect2.js (0 errors) ====
    /** @typedef {{ a: 1, m: 1 }} C */
    const f = function() {};
    module.exports = f;
==== use.js (1 errors) ====
    /** @typedef {import('./controlFlowJSClassProperty').C} C */
                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './controlFlowJSClassProperty' or its corresponding type declarations.
    /** @type {C} */
    var c
    